# MultiThreadFileCompressor

./: .gitignore  CMakeLists.txt
include/: chunker.h  compressor.h  file_io.h  huffman.h  threaded_compressor.h
src/: chunker.cpp  file_io.cpp  huffman.cpp  main.cpp  threaded_compressor.cpp
tests/: CMakeLists.txt  sampleTest.cpp  test_chunker.cpp  test_fileio.cpp  test_huffman.cpp
